// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchSchema custom formats bcp47 it does not match 123 1`] = `
"expect(received).toMatchSchema(schema)

received
  /locale should match format \\"bcp47\\"
"
`;

exports[`toMatchSchema custom formats bcp47 it does not match EN-US 1`] = `
"expect(received).toMatchSchema(schema)

received
  /locale should match format \\"bcp47\\"
"
`;

exports[`toMatchSchema custom formats bcp47 it does not match en_US 1`] = `
"expect(received).toMatchSchema(schema)

received
  /locale should match format \\"bcp47\\"
"
`;

exports[`toMatchSchema custom formats bcp47 it does not match en-us 1`] = `
"expect(received).toMatchSchema(schema)

received
  /locale should match format \\"bcp47\\"
"
`;

exports[`toMatchSchema custom formats bcp47 it does not match enus 1`] = `
"expect(received).toMatchSchema(schema)

received
  /locale should match format \\"bcp47\\"
"
`;

exports[`toMatchSchema custom keywords instanceof 1`] = `
"expect(received).toMatchSchema(schema)

received
  should pass \\"instanceof\\" keyword validation
    Expected: <string> Array
    Path:     #/instanceof
"
`;

exports[`toMatchSchema custom keywords typeof 1`] = `
"expect(received).toMatchSchema(schema)

received
  should pass \\"typeof\\" keyword validation
    Expected: <string> string
    Path:     #/typeof
"
`;

exports[`toMatchSchema does not crash on circular references 1`] = `
"expect(received).toMatchSchema(schema)

received
  /hello should be string
"
`;

exports[`toMatchSchema fails for matching schema when using .not 1`] = `
"expect(received).not.toMatchSchema(schema)

Expected value not to match schema

"
`;

exports[`toMatchSchema fails for missing required keys 1`] = `
"expect(received).toMatchSchema(schema)

received
  should have required property 'hello'
"
`;

exports[`toMatchSchema fails for wrong type 1`] = `
"expect(received).toMatchSchema(schema)

received
  /hello should be string
"
`;

exports[`toMatchSchema fails when additional properties are found but forbidden 1`] = `
"expect(received).toMatchSchema(schema)

received
  should NOT have additional properties, but found 'another'
"
`;

exports[`toMatchSchema fails when pattern does not match 1`] = `
"expect(received).toMatchSchema(schema)

received
  /hello should match pattern \\"[a-z]+\\"
"
`;

exports[`toMatchSchema includes the description in the error when provided 1`] = `
"expect(received).toMatchSchema(schema)

en-US language pack
  /hello should be string
"
`;

exports[`toMatchSchema output verbose errors should display schema $id in the schema path 1`] = `
"expect(received).toMatchSchema(schema)

received
  /test should be number
    Received: <string> 123
    Path:     testSchema#/allOf/0/properties/test/type
"
`;

exports[`toMatchSchema output verbose errors should output an error with only the received input printed 1`] = `
"expect(received).not.toMatchSchema(schema)

Expected value not to match schema

received
<null>
"
`;

exports[`toMatchSchema output verbose errors should output an error with only the received input printed 2`] = `
"expect(received).not.toMatchSchema(schema)

Expected value not to match schema

received
<boolean> true
"
`;

exports[`toMatchSchema output verbose errors should output an error with only the received input printed 3`] = `
"expect(received).not.toMatchSchema(schema)

Expected value not to match schema

received
<number> 1
"
`;

exports[`toMatchSchema output verbose errors should output an error with only the received input printed 4`] = `
"expect(received).not.toMatchSchema(schema)

Expected value not to match schema

received
<string> this is valid but expect().not.toMatchSchema has been used
"
`;

exports[`toMatchSchema output verbose errors should output an error with only the received input printed 5`] = `
"expect(received).not.toMatchSchema(schema)

Expected value not to match schema

received
<object> {}
"
`;

exports[`toMatchSchema output verbose errors should output an error with only the received input printed 6`] = `
"expect(received).not.toMatchSchema(schema)

Expected value not to match schema

received
<array> [\\"this is valid but expect().not.toMatchSchema has been used\\"]
"
`;

exports[`toMatchSchema output verbose errors should output error with details printed per errored property 1`] = `
"expect(received).toMatchSchema(schema)

received
  should NOT have more than 1 items
    Path:     #/allOf/0/maxProperties
  should NOT have fewer than 999 items
    Path:     #/allOf/0/minProperties
  should have required property 'testRequired'
    Path:     #/allOf/0/required
  should match pattern \\"^false\\"
    Path:     #/allOf/0/propertyNames/pattern
  property name 'testType' is invalid
    Expected: {\\"pattern\\":\\"^false\\"}
    Path:     #/allOf/0/propertyNames
  should match pattern \\"^false\\"
    Path:     #/allOf/0/propertyNames/pattern
  property name 'testNotEmpty' is invalid
    Expected: {\\"pattern\\":\\"^false\\"}
    Path:     #/allOf/0/propertyNames
  should match pattern \\"^false\\"
    Path:     #/allOf/0/propertyNames/pattern
  property name 'testEnum' is invalid
    Expected: {\\"pattern\\":\\"^false\\"}
    Path:     #/allOf/0/propertyNames
  should match pattern \\"^false\\"
    Path:     #/allOf/0/propertyNames/pattern
  property name 'testConst' is invalid
    Expected: {\\"pattern\\":\\"^false\\"}
    Path:     #/allOf/0/propertyNames
  should match pattern \\"^false\\"
    Path:     #/allOf/0/propertyNames/pattern
  property name 'testFormat' is invalid
    Expected: {\\"pattern\\":\\"^false\\"}
    Path:     #/allOf/0/propertyNames
  should match pattern \\"^false\\"
    Path:     #/allOf/0/propertyNames/pattern
  property name 'testPattern' is invalid
    Expected: {\\"pattern\\":\\"^false\\"}
    Path:     #/allOf/0/propertyNames
  should match pattern \\"^false\\"
    Path:     #/allOf/0/propertyNames/pattern
  property name 'testItems' is invalid
    Expected: {\\"pattern\\":\\"^false\\"}
    Path:     #/allOf/0/propertyNames
  should match pattern \\"^false\\"
    Path:     #/allOf/0/propertyNames/pattern
  property name 'testNumber' is invalid
    Expected: {\\"pattern\\":\\"^false\\"}
    Path:     #/allOf/0/propertyNames
  should match pattern \\"^false\\"
    Path:     #/allOf/0/propertyNames/pattern
  property name 'testIf' is invalid
    Expected: {\\"pattern\\":\\"^false\\"}
    Path:     #/allOf/0/propertyNames
  should match pattern \\"^false\\"
    Path:     #/allOf/0/propertyNames/pattern
  property name 'testElse' is invalid
    Expected: {\\"pattern\\":\\"^false\\"}
    Path:     #/allOf/0/propertyNames
  should match pattern \\"^false\\"
    Path:     #/allOf/0/propertyNames/pattern
  property name 'testThen' is invalid
    Expected: {\\"pattern\\":\\"^false\\"}
    Path:     #/allOf/0/propertyNames
  /testType should be null
    Received: <boolean> false
    Path:     #/allOf/0/properties/testType/type
  /testNotEmpty should NOT have fewer than 1 characters
    Received: <empty string>
    Path:     #/allOf/0/properties/testNotEmpty/minLength
  /testEnum should be equal to one of the allowed values
    Expected: [1,2]
    Received: <boolean> false
    Path:     #/allOf/0/properties/testEnum/enum
  /testConst should be equal to constant
    Expected: <boolean> true
    Received: <boolean> false
    Path:     #/allOf/0/properties/testConst/const
  /testFormat should match format \\"email\\"
    Received: <string> test
    Path:     #/allOf/0/properties/testFormat/format
  /testPattern should match pattern \\"[0-9]+\\"
    Received: <string> test
    Path:     #/allOf/0/properties/testPattern/pattern
  /testItems should NOT have more than 1 items
    Received: <array> [false,1]
    Path:     #/allOf/0/properties/testItems/maxItems
  /testItems should NOT have fewer than 5 items
    Received: <array> [false,1]
    Path:     #/allOf/0/properties/testItems/minItems
  /testItems/0 should be equal to constant
    Expected: <boolean> true
    Received: <boolean> false
    Path:     #/allOf/0/properties/testItems/items/const
  /testItems/1 should be equal to constant
    Expected: <boolean> true
    Received: <number> 1
    Path:     #/allOf/0/properties/testItems/items/const
  /testItems/0 should be equal to constant
    Expected: <boolean> true
    Received: <boolean> false
    Path:     #/allOf/0/properties/testItems/contains/const
  /testItems/1 should be equal to constant
    Expected: <boolean> true
    Received: <number> 1
    Path:     #/allOf/0/properties/testItems/contains/const
  /testItems should contain at least 1 valid item(s)
    Expected: {\\"const\\":true}
    Received: <array> [false,1]
    Path:     #/allOf/0/properties/testItems/contains
  /testNumber should be <= 0
    Received: <number> 1
    Path:     #/allOf/0/properties/testNumber/maximum
  /testNumber should be >= 999
    Received: <number> 1
    Path:     #/allOf/0/properties/testNumber/minimum
  /testNumber should be < 1
    Received: <number> 1
    Path:     #/allOf/0/properties/testNumber/exclusiveMaximum
  /testNumber should be > 999
    Received: <number> 1
    Path:     #/allOf/0/properties/testNumber/exclusiveMinimum
  /testNumber should be multiple of 5
    Received: <number> 1
    Path:     #/allOf/0/properties/testNumber/multipleOf
  /testThen should be equal to constant
    Expected: <boolean> true
    Received: <null>
    Path:     #/allOf/1/then/properties/testThen/const
  should match \\"then\\" schema
    Expected: {\\"type\\":\\"object\\",\\"properties\\":{\\"testThen\\":{\\"const\\":true}}}
    Received: {\\"testType\\":false,\\"testNotEmpty\\":\\"\\",\\"testEnum\\":false,\\"testConst\\":false,\\"testFormat\\":\\"test\\",\\"testPattern\\":\\"test\\",\\"testItems\\":[false,1],\\"testNumber\\":1,\\"testIf\\":true,\\"testThen\\":null}
    Path:     #/allOf/1/if
  should NOT be valid
    Expected: {\\"type\\":\\"object\\"}
    Received: {\\"testType\\":false,\\"testNotEmpty\\":\\"\\",\\"testEnum\\":false,\\"testConst\\":false,\\"testFormat\\":\\"test\\",\\"testPattern\\":\\"test\\",\\"testItems\\":[false,1],\\"testNumber\\":1,\\"testIf\\":true,\\"testThen\\":null}
    Path:     #/allOf/2/not
"
`;
